# tmpfs-framework

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  __init__.py  cbor_utils.py  pyproject.toml  readme.md  requirements.txt  sensorReader.py
.github/workflows/: draft-pdf.yml  python-app.yml
JOSS/: paper.bib  paper.md
examples/: README.md  guided_example.md  network_logger.py  network_plotter.py  wifiSignalLogger.py  wifiSingalPlotter.py
examples/Guided_example/: README.md  full_example.py
examples/Network_monitoring/: README.md  network_logger.py  network_plotter.py
examples/webcam_example/: README.md  circle_finder.py  visualisation.py  webcam_reader.py
src/: sensorReader.py  sensorWriter.py
src/tmpfs_framework/: __init__.py  cbor_utils.py  sensorReader.py  sensorWriter.py  sensor_reader.py  sensor_writer.py
test/: test_cbor_utils.py  test_sensor_reader.py  test_sensor_writer.py
