[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "tmpfs-framework"
version = "0.0.1"
authors = [
  { name="Timo Mäenpää", email="timo.maenpaa@oulu.fi"},
]
description = "Writer and reader for use in tmpfs framework"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
"cbor2>=5.4.6",
"numpy>=1.21.5",
"watchdog>=2.1.6"
]


# [tool.hatch.build.targets.wheel]
# packages = ["src/"]
